// Copyright 2019 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Extension for specifying which field in a message is to be considered an
// entity key, for the purposes associating gRPC calls with entities and
// sharding.

syntax = "proto3";

import "google/protobuf/descriptor.proto";

package cloudstate;

option java_package = "io.cloudstate";
option go_package = "github.com/cloudstateio/go-support/cloudstate/;cloudstate";

extend google.protobuf.FieldOptions {
    bool entity_key = 50002;
}
extend google.protobuf.MessageOptions {
    EntityMessageOptions entity = 50002;
}

extend google.protobuf.OneofOptions {
    bool api_response_value = 50002;
}

message EntityMessageOptions {
    bool api_request = 50002;
    bool api_value_response = 50003;
    bool api_value = 50004;
    bool domain_event = 50005;
    bool domain_state = 50006;
}